Revision history for Data::Validation

          - Switched to lexical subroutines
          - Improved test coverage

0.18.1    2014-10-19 20:31:23
          - Added test for URL. Fixed RT#99585 (pterjan++)

0.17.1    2014-10-03 19:35:04
          - Yes. Just the one smoker
          - Disabling CPAN Testing on k83 - see if it's just one smoker
          - Random test failures
            c814fcba-4a81-11e4-be14-86252c6f0924
            a1baa998-4a81-11e4-9414-c7952c6f0924

0.16.1    2014-10-02 23:09:07
          - Updated prereqs
          - Added level attribute to adjust check_field exception frame
          - Replaced namespace::sweep with autoclean

0.15.1    2014-01-31 23:36:09
          - Added exception classes
          - Removed Ident lines
          - Removed VERSION except in main module
          - Dropped dependency on Class::Load

0.14.1    2013-08-15 16:26:32
          - Switched to Dist::Zilla

0.13.5    2013-08-11 01:12:00
          - Toolchain update. Attempt to filter out residual noise
          - WTF? 099f04b9-6c8d-1014-9814-a1ae5cf4dae8. Updated toolchain
          - Reset min perl testing to original behaviour
          - Raised min Perl ver to v5.10.1
