@@ -2,15 +2,15 @@ name = Data-Validation
 
 [Prereqs]
 perl              = 5.010001
-namespace::autoclean = 0.20
-Email::Valid      = 1.194
+namespace::autoclean = 0.22
+Email::Valid      = 1.195
 Exporter::Tiny    = 0.042
-LWP::UserAgent    = 2.036
+HTTP::Tiny        = 0.054
 Module::Runtime   = 0.014
-Moo               = 1.006000
+Moo               = 2.000001
 Regexp::Common    = 2013031301
 Try::Tiny         = 0.22
-Unexpected        = v0.34.0
+Unexpected        = v0.38.0
 
 [Prereqs / ConfigureRequires]
 version           = 0.88
@@ -22,7 +22,7 @@ Class::Null       = 1.09
 Module::Build     = 0.4004
 
 [Prereqs / Recommends]
-Class::Usul       = v0.47.0
+Class::Usul       = v0.58.0
 
 [Meta::Dynamic::Config]
 
@@ -41,18 +41,33 @@ license           = http://dev.perl.org/licenses/
 homepage          = https://metacpan.org/author/PJFL
 bugtracker.web    = http://rt.cpan.org/NoAuth/Bugs.html?Dist=Data-Validation
 bugtracker.mailto = bug-Data-Validation@rt.cpan.org
-;repository.url   = git://github.com/pjfl/Data-Validation.git
-;repository.web   = http://github.com/pjfl/Data-Validation
-;repository.type  = git
+repository.url    = git://github.com/pjfl/Data-Validation.git
+repository.web    = http://github.com/pjfl/Data-Validation
+repository.type   = git
+
+[ReadmeAnyFromPod / ReadmeMarkdownInRoot]
+filename          = README.md
+location          = root
+type              = markdown
+
+[Run::BeforeBuild]
+run               = cp .build.PL Build.PL
+
+[CopyFilesFromBuild]
+copy              = Build.PL
+move              = cpanfile
+
+[GatherDir]
+exclude_filename  = cpanfile
 
 ; So apparently order matters
 [ReadmeAnyFromPod]
 [Signature]
-[GatherDir]
 [AbstractFromPOD]
 [LicenseFromModule]
 [VersionFromModule]
 [ModuleBuild::Custom]
+[CPANFile]
 [License]
 [MetaJSON]
 [MetaYAML]
