@@ -1,5 +1,11 @@
 Revision history for Data::Validation
 
+          - Added badges and public repository
+          - Switched to HTTP::Tiny from LWP::UserAgent
+          - Renamed filter factory subclass API method to filter
+          - Renamed constraint factory subclass API method to validate
+          - Renamed Filtes filter to filter_value
+          - Renamed Constraints validate to validate_value
           - Switched to lexical subroutines
           - Improved test coverage
 
